--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.3",
+    "@blueprintjs/core": "^5.16.2",
     "graphql": "^16.10.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.83.0"
