--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.12.3",
     "@blueprintjs/core": "^5.16.2",
+    "classnames": "^2.5.1",
     "graphql": "^16.10.0",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
