--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^5.16.2",
+    "axios": "^1.8.3",
     "classnames": "^2.5.1",
     "graphql": "^16.10.0",
     "normalize.css": "^8.0.1",
